[package]
name = "siren"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["__rustls", "__tls", "blocking", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"

[[bin]]
name = "siren"
path = "src/main.rs"